# minit

./: CHANGELOG.md  Cargo.toml  README.md
.changes/: about-macos-event.md  acccelerator-typo.md  add-context-menu-dismiss-result.md  expose-modifiers-and-key-on-accelerator.md  fix_cargo_pkg_authors_value_sep.md  from_cargo_metadata_macro.md  from_cargo_metadata_removal.md  gtk-context-menu.md  linux-icon-menu-item-overlapp.md  mac-close-menu-before-release.md  make-macos-impl-details-private.md  objc06.md  set-theme-dark-windows.md  static-thread-local.md  unsafe.md  use-objc2.md  win32-context-menu-fixes  windows-0.59.md  windows-menu-bar.md  windows-theme.md
.github/workflows/: test.yml
examples/: gtk.rs  tao.rs  winit.rs  wry.rs
examples/windows-common-controls-v6/: Cargo.toml
examples/windows-common-controls-v6/src/: main.rs
src/: about_metadata.rs  accelerator.rs  error.rs  icon.rs  lib.rs  menu.rs  menu_id.rs
src/items/: check.rs  compat.rs  icon.rs  mod.rs  normal.rs  predefined.rs  submenu.rs
src/platform_impl/: mod.rs
src/platform_impl/gtk/: about_dialog.rs  accelerator.rs  icon.rs  mod.rs
src/platform_impl/macos/: accelerator.rs  mod.rs
src/platform_impl/windows/: accelerator.rs  dark_menu_bar.rs  icon.rs  mod.rs
